reduced font size to prevent overflowing in cn language mode (hack :D)

--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ button {
 }
 
 .printable {
-  font-size: 30px;
+  font-size: 28px;
 }
 
 td.metadata-row {
